/* Opendushe sidodud vepsän muštatišed */ +

--- a/Openduz.mw
+++ b/Openduz.mw
@@ -100,6 +100,7 @@ Britanine joganedal'ne [[The Economist]]-lehtez kirjuti [[Vikipedii|Vikipedijan]
 * ''Ala openda kalad ujumaha.''
 * ''Ei koir ujumaha opete händad ligotamata.''
 * ''Igän eläd, igän openud.''
+* ''Maman openduz — kündushesai.''
 * ''Min norelaz opendatoi, sen rauhemba mahtad.''
 * ''Openda laps', kuni mučuine.''
 </blockquote>
