/* Ekonomikha sidodud vepsän muštatišed */ +

--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -21,10 +21,12 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 <blockquote>
 * ''Edemba hutid, lähemba otad.''
 * ''Ei katil keita, a emäg.''
+* ''Ei küzugoi, teravas-ik radab, küzutas, ken radab.''
 * ''Hüvä da veraz, paha da ičeiž.''
 * ''Kaht jänišad küksendeled, ni üht ed tabada.''
 * ''Kebnas tuli, kebnas läksi.''
 * ''Kenen tavar, ka se i arvon paneb.''
+* ''Küzuda eile vargastada.''
 * ''Tervhut ed osta.''
 </blockquote>
 
