--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -26,6 +26,7 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 * ''Kaht jänišad küksendeled, ni üht ed tabada.''
 * ''Kebnas tuli, kebnas läksi.''
 * ''Kenen tavar, ka se i arvon paneb.''
+* ''Korman ei käske.'' (rahoid ei ole)
 * ''Küzuda eile vargastada. / Küzundas ei lögoi.''
 * ''Tervhut ed osta.''
 </blockquote>
