/* Pähä sidodud vepsän muštatišed */ +

--- a/Pä.mw
+++ b/Pä.mw
@@ -29,6 +29,7 @@ Südäimižed:
 * ''Ei kalliž ole čomuz, a kalliž om pä.''
 * ''Kažita hired i pän södas.''
 * ''Kelel päd ed söta.''
+* ''Lajind satatest ei tege, kuni pul pähä ei iške.''
 * ''Pän kibištab, perskele kebnemb om.''
 * ''Ülemba päd korvad ei kazgoi.''
 </blockquote>
