/* Živatha sidodud vepsän muštatišed */ +

--- a/Živatad.mw
+++ b/Živatad.mw
@@ -30,6 +30,7 @@ Ezmäižed živatad sünduiba 500 mln («[[kembrii|kembrine]] poukahtuz») ... 1
 == Živatha sidodud vepsän muštatišed ==
 <blockquote>
 * ''Aidatomha pöudho kaikutne živat tuleb.''
+* ''Laps' om kuti živat.''
 * ''Ristit koleb, a živat kadob.''
 </blockquote>
 
