/* Opendushe sidodud vepsän muštatišed */ +

--- a/Openduz.mw
+++ b/Openduz.mw
@@ -103,6 +103,7 @@ Britanine joganedal'ne [[The Economist]]-lehtez kirjuti [[Vikipedii|Vikipedijan]
 * ''Maman openduz — kündushesai.''
 * ''Min norelaz opendatoi, sen rauhemba mahtad.''
 * ''Openda laps', kuni mučuine.''
+* ''Openda last kuni poikpoli sijas magadab.''
 </blockquote>
 
 == Homaičendad ==
