/* Sömhä sidodud vepsän muštatišed */ +

--- a/Söm.mw
+++ b/Söm.mw
@@ -20,6 +20,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 * ''Kelel päd ed söta.''
 * ''Ken aigoiš libui, se i söi, a ken möhäs libui, se luzikan noli.''
 * ''Keza keradab, a tal'v söb.''
+* ''Lapses om äi ližad: kalan sab da kaks' söb.''
 * ''Lehm tanhal — söm pertiš.''
 * ''Leib da vezi — saldatan söm.''
 * ''Mez' söb, mez' sab, mehele andab Jumal.''
