/* Ekonomikha sidodud vepsän muštatišed */ +

--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -19,6 +19,7 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 
 == Ekonomikha sidodud vepsän muštatišed ==
 <blockquote>
+* ''Eci, kut leibäd ecid, siloi löudad.''
 * ''Edemba hutid, lähemba otad.''
 * ''Ei katil keita, a emäg.''
 * ''Ei küzugoi, teravas-ik radab, küzutas, ken radab.''
