/* Sömhä sidodud vepsän muštatišed */ +

--- a/Söm.mw
+++ b/Söm.mw
@@ -26,6 +26,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 * ''Mez' söb, mez' sab, mehele andab Jumal.''
 * ''Midä ei sögoi, sidä i laudale ei togoi.''
 * ''Mitte samine, mugoi i sömine.''
+* ''Sö čomad lent i pida čomad mel't.''
 * ''Sö kromaine, ka linned priha čomaine.''
 * ''Söid kut siga, läksid kut koza.''
 * ''Söm mehen kandišeb.''
