--- a/Araban_Ühtenzoittud_Emiratoiden_flag.mw
+++ b/Araban_Ühtenzoittud_Emiratoiden_flag.mw
@@ -1,9 +1,13 @@
 [[Fail:Flag of the United Arab Emirates.svg|border|right|250px]]
-'''Araban Ühtenzoittud Emiratoiden flag''' ([[araban kel'|arab.]]: ''علم الإمارات العربية المتحدة'') om [[Araban Ühtenzoittud Emiratad|Araban Ühtenzoittud Emiratoiden]] valdkundflag. Flagan proporcii om ''1:2''.
+'''Araban Ühtenzoittud Emiratoiden flag''' ({{lang-ar|علم الإمارات العربية المتحدة}}) om [[Araban Ühtenzoittud Emiratad|AÜE:n]] üks' oficialižiš simvolišpäi. Flagan proporcii om ''1:2''.
 
-Nügüdläine flag om vahvištadud [[1971. voz'|1971]]-nden voden uhokul.
+Nügüdläine flag om vahvištadud vn [[1971. voz'|1971]] uhokul.
+
+== Kacu mugažo ==
+* [[Araban Ühtenzoittud Emiratoiden valdkundznam]]
+
+{{Commons|Category:Flags of the United Arab Emirates}}
 
 {{stub}}
-
 [[Kategorii:Flagad]]
 [[Kategorii:Araban Ühtenzoittud Emiratad]]
