--- a/Araban_Ühtenzoittud_Emiratoiden_flag.mw
+++ b/Araban_Ühtenzoittud_Emiratoiden_flag.mw
@@ -1,7 +1,7 @@
 [[Fail:Flag of the United Arab Emirates.svg|border|right|250px]]
 '''Araban Ühtenzoittud Emiratoiden flag''' ({{lang-ar|علم الإمارات العربية المتحدة}}) om [[Araban Ühtenzoittud Emiratad|AÜE:n]] üks' oficialižiš simvolišpäi. Flagan proporcii om ''1:2''.
 
-Nügüdläine flag om vahvištadud vn [[1971. voz'|1971]] uhokul.
+Nügüdläine flag om vahvištadud vn [[1971. voz'|1971]] 2. päiväl talvkud. Se kogoneb panarabižid mujuid i muga ezimeletab araban mail'man ühtmut. Trikoloran mujud oma (ülähäspäi) vihand, vauged, must. Rusked püštoiged šoid otab flagan nelländest huralpäi, se muju om kaikiden emiratoiden flagoiš. Valdkundan torguindlaivad i erased civiližed sebrad kävutadas flagad rusttan mujun AÜE:n flaganke huras üläčogas.
 
 == Kacu mugažo ==
 * [[Araban Ühtenzoittud Emiratoiden valdkundznam]]
