--- a/Araban_Ühtenzoittud_Emiratoiden_flag.mw
+++ b/Araban_Ühtenzoittud_Emiratoiden_flag.mw
@@ -3,6 +3,12 @@
 
 Nügüdläine flag om vahvištadud vn [[1971. voz'|1971]] 2. päiväl talvkud, 19-vozne sil aigal Abdullah Mohammed Al Maainah tariči valdkundflagan pirdatest. Se kogoneb panarabižid mujuid i muga ezimeletab araban mail'man ühtmut. Trikoloran mujud oma (ülähäspäi) vihand, vauged, must. Rusked püštoiged šoid otab flagan nelländest huralpäi, se muju om kaikiden emiratoiden flagoiš. Valdkundan torguindlaivad i erased civiližed sebrad kävutadas flagad rusttan mujun AÜE:n flaganke huras üläčogas.
 
+Mujuiden znamoičendad:
+* rusked — [[Hašemitoiden dinastii]], rohktuz, varmduz, vägi, i ühtmuz.
+* vihand — [[Fatimidoiden dinastii]] vai Rašidan halifat, hüväd varastused, toiv, ihastuz, armastuz, i optimizm.
+* vauged — [[Umajadoiden dinastii]], puhthuz, toziavol'jaižuz, kožund, purizm.
+* must — [[Abbasidoiden dinastii]], vägestuz vihanikoiden päl, melen vägi.
+
 == Kacu mugažo ==
 * [[Araban Ühtenzoittud Emiratoiden valdkundznam]]
 
