--- a/Alveš_Brunu.mw
+++ b/Alveš_Brunu.mw
@@ -2,7 +2,14 @@
 | изображение = BrunoAlves.jpg
 | описание изображения = Alveš Brunu vn 2011 redukus
 }}
-'''Brunu Alveš''' ({{lang-pt|Bruno Eduardo Regufe Alves}} [ˈbɾunu ˈaɫvɨʃ]; sünd. [[27. kül'mku]] [[1981]], [[Povua di Varzin]]-lidn, [[Portu]]-lidnan ümbrik, [[Portugalii]]) om portugalijalaine futbolist, keskusen [[kaičii (futbol)|kaičii]]. Šotlandijan «Reindžers»-futbolkluban (vn 2017 kezakuspäi) da Portugalijan ühthižjoukun nügüdläine vändai. Oli [[FK Zenit Piter|Zenitan]] vändajan (vn 2010 sügüz'ku — vn 2013 kezaku).
+'''Brunu Alveš''' ({{lang-pt|Bruno Eduardo Regufe Alves}} [ˈbɾunu ˈaɫvɨʃ]; sünd. [[27. kül'mku]] [[1981]], [[Povua di Varzin]]-lidn, [[Portu]]-lidnan ümbrik, [[Portugalii]]) om portugaline futbolist, keskusen [[kaičii (futbol)|kaičii]]. Britanižen «Reindžers»-futbolkluban (Šotlandii, vn 2017 kezakuspäi) da Portugalijan ühthižjoukun nügüdläine vändai.
+
+Mez' oli [[FK Zenit Piter|Zenitan]] vändajan (vn 2010 sügüz'ku — vn 2013 kezaku).
+
+== Personaline elo ==
+Alveš om [[Brazilii|braziližen]] Vašington-futbolistan poig. Tat sirdi Portugalijha i vändi siš, portugaline mam radoi omblijan. Brunun Žeraldu- i Žuliu-velled oma futbolistad mugažo. Tetab braziline Žeraldo Kleofas Dias Alves-futbolist (Žeraldo Assoviador kucundnimenke) oli mehen däd', vändi 1970-nziden voziden keskes.
+
+Mez' om naižiš, kaks' last om sündnus naimiželos.
 
 == Homaičendad ==
 <references/>
