--- a/.de.mw
+++ b/.de.mw
@@ -1,4 +1,9 @@
+[[Fail:Logo DENIC.svg|thumb|right|250px|Domenan logotip]]
 '''.de''' om [[Saksanma]]n [[DNS|Internet-domen]]. Se om avaitud [[1986. voz'|1986]]-nden voden 5. päiväl kül'mkud.<ref>[http://iana.org/domains/root/db/de.html IANA — .de Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+
+Registracii om lasktud kahtendel tazopindal röunatusita. Vn 2021 sügüz'kus domennimiden lugu oli enamba 17 millionad, .de om koumanz' ülätazopindan domen populärižusen mödhe [[.cn]]- i [[.com]]-domenoiden jäl'ghe.
+
+Ezimeletadud .dd-domen Saksanman Demokratižen Tazovaldkundan täht ei olend kävutandas nikonz Saksanman maiden ühtištusen tagut.
 
 == Homaičendad ==
 <references />
