--- a/.de.mw
+++ b/.de.mw
@@ -1,7 +1,7 @@
 [[Fail:Logo DENIC.svg|thumb|right|250px|Domenan logotip]]
 '''.de''' om [[Saksanma]]n [[DNS|Internet-domen]]. Se om avaitud [[1986. voz'|1986]]-nden voden 5. päiväl kül'mkud.<ref>[http://iana.org/domains/root/db/de.html IANA — .de Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
 
-Registracii om lasktud kahtendel tazopindal röunatusita, no ku domennimen valdoičii eläb verhiš maiš, ka DENIC:ale sab küzuda händast nimitamha domennimen sajad Saksanmas kahtes nedališ. Vn 2021 sügüz'kus domennimiden lugu oli enamba 17 millionad, .de om nellänz' ülätazopindan domen populärižusen mödhe [[.cn]]- (20 mln), [[.com]]- i [[.tk]]-domenoiden jäl'ghe. AÜV:oiš, Sures Britanijas i Šveicarijas eläb kaikiš enamba verazmaižid registracijan tahtnikoid.
+Registracii om lasktud kahtendel tazopindal röunatusita, no ku domennimen valdoičii eläb verhiš maiš, ka DENIC:ale sab küzuda händast nimitamha domennimen sajad Saksanmas kahtes nedališ. Registracijan jäl'ghe domennimi om väges strokuta, maksmine tose ühteks vodeks. Vn 2021 sügüz'kus domennimiden lugu oli enamba 17 millionad, .de om nellänz' ülätazopindan domen populärižusen mödhe [[.com]]- (148 mln), [[.tk]]- (31 mln) i [[.cn]]- (20 mln) domenoiden jäl'ghe. AÜV:oiš, Sures Britanijas i Šveicarijas eläb kaikiš enamba verazmaižid registracijan tahtnikoid.
 
 Ezimeletadud .dd-domen Saksanman Demokratižen Tazovaldkundan täht ei olend kävutandas nikonz Saksanman maiden ühtištusen tagut.
 
