--- a/.hu.mw
+++ b/.hu.mw
@@ -1,5 +1,7 @@
 '''.hu''' om [[Mad'jaranma]]n [[DNS|Internet-domen]]. Se om avaitud [[1990. voz'|1990]]-nden voden 7. päiväl kül'mkud.<ref>[http://iana.org/domains/root/db/hu.html IANA — .hu Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
 
+Registracii om lasktud kahtendel da koumandel tazopindoil Mad'jaranman i [[Evropan Ühtištuz|EÜ:n]] rezidentoiden täht. Vn 2020 1. päiväl semendkud .hu-zonan domennimiden lugu oli 776,110.
+
 == Homaičendad ==
 <references />
 
@@ -7,6 +9,7 @@
 * [http://www.domain.hu/domain/szabalyzat.html Domenan registracijan sait (''domain.hu'').] {{ref-hu}} {{ref-en}}, ohjandai om «Internet Szolgáltatók Tanácsa» (''Internet-provaideriden konsuluz, iszt.hu'')
 * [http://www.nic.hu/ «Internet Szolgáltatók Tanácsa» — koordinacine keskuz verkos (''nic.hu'').] {{ref-hu}} {{ref-en}}
 * [http://www.iana.org/domains/root/db/hu.html IANA-informacii (''iana.org'').] {{ref-en}}
+{{Commons|Category:.hu}}
 
 {{CcTLD}}
 
