--- a/.hu.mw
+++ b/.hu.mw
@@ -2,6 +2,16 @@
 
 Registracii om lasktud kahtendel da koumandel tazopindoil Mad'jaranman i [[Evropan Ühtištuz|EÜ:n]] rezidentoiden täht. Vn 2020 1. päiväl semendkud .hu-zonan domennimiden lugu oli 776,110.
 
+Kahtenden tazopindan reglamentiruidud domenad:
+* '''asn.hu''' — associacijad i kommertižetomad organizacijad
+* '''.co.hu''' — kommertižed kompanijad, korporacijad
+* '''.edu.hu''' — tedon i üläopendusen aluzkundad
+* '''.fam.hu''', '''.priv.hu''' — personad
+* '''.gov.hu''' — valdkundaližed organad
+* '''.info.hu''' — informacižed saitad
+* '''.net.hu''' — internetverkoiden provaiderad da organizacijad
+* '''.or.hu''', '''.org.hu''' — kommertižetomad organizacijad
+
 == Homaičendad ==
 <references />
 
