--- a/Venäman_TV-kanalad.mw
+++ b/Venäman_TV-kanalad.mw
@@ -1,12 +1,18 @@
-Alemba om '''[[Venäma]]n [[TV-kanal]]oiden nimikirjutesed'''.
+Joga [[Venäma]]n [[TV-kanal]]ale pidab olda kožujanke valdkundaliženke todištusenke registracijas. Kanalal alusenpanii i valdoičii kompanii om olmas.
+
+Alemba om '''Venäman TV-kanaloiden nimikirjutesid'''.
 # '''[[1. Venäman TV-kanaloiden mul'tikompleks|1. mul'tikompleks]]''' (kaikile sättujad)
 # '''[[2. Venäman TV-kanaloiden mul'tikompleks|2. mul'tikompleks]]''' (toižed znamoičendan mödhe)
 # '''3. mul'tikompleks''' (planoiš)
 # '''[[Venäman federaližed TV-kanalad|Federaližed TV-kanalad]]'''
 # '''[[Venäman regionaližed TV-kanalad|Regionaližed TV-kanalad]]'''
-# '''[[Venäman kamdajankanalad|Kamdajankanalad]]'''
+# '''[[Venäman kaimdajankanalad|Kaimdajankanalad]]'''
 # '''[[Venäman Internetižed TV-kanalad|Regionaližed Internetižed TV-kanalad]]'''
 ----
 # '''[[Enččed Venäman TV-kanalad|Enččed TV-kanalad]]'''
 
+{{Commons|Category:Television channels from Russia}}
+{{Venäman TV-kanalad}}
+
+{{stub}}
 [[Kategorii:Venäman TV-kanalad| ]]
