--- a/Venäman_TV-kanalad.mw
+++ b/Venäman_TV-kanalad.mw
@@ -1,15 +1,15 @@
 Joga [[Venäma]]n [[TV-kanal]]ale pidab olda kožujanke valdkundaliženke todištusenke registracijas. Kanalal alusenpanii i valdoičii kompanii om olmas.
 
 Alemba om '''Venäman TV-kanaloiden nimikirjutesid'''.
-# '''[[1. Venäman TV-kanaloiden mul'tikompleks|1. mul'tikompleks]]''' (kaikile sättujad)
-# '''[[2. Venäman TV-kanaloiden mul'tikompleks|2. mul'tikompleks]]''' (toižed znamoičendan mödhe)
-# '''3. mul'tikompleks''' (planoiš)
+# '''[[Venäman TV-kanaloiden 1. mul'tikompleks|1. mul'tikompleks]]''' (kaikile sättujad)
+# '''[[Venäman TV-kanaloiden 2. mul'tikompleks|2. mul'tikompleks]]''' (toižed znamoičendan mödhe)
+# '''3. mul'tikompleks''' (planoiš, regionaližiden i municipaližiden TV-kanaloiden täht)
 # '''[[Venäman federaližed TV-kanalad|Federaližed TV-kanalad]]'''
 # '''[[Venäman regionaližed TV-kanalad|Regionaližed TV-kanalad]]'''
-# '''[[Venäman kaimdajankanalad|Kaimdajankanalad]]'''
-# '''[[Venäman Internetižed TV-kanalad|Regionaližed Internetižed TV-kanalad]]'''
+# '''[[Venäman municipaližed TV-kanalad|Municipaližed TV-kanalad]]'''
+# '''[[Venäman TV-kanalad verhiš maiš|TV-kanalad verhiš maiš]]'''
 ----
-# '''[[Enččed Venäman TV-kanalad|Enččed TV-kanalad]]'''
+'''[[Enččed Venäman TV-kanalad|Enččed TV-kanalad]]'''
 
 {{Commons|Category:Television channels from Russia}}
 {{Venäman TV-kanalad}}
