*Empty MediaWiki Message*

--- a/Venäman_TV-kanalad.mw
+++ b/Venäman_TV-kanalad.mw
@@ -1,15 +1,16 @@
 Joga [[Venäma]]n [[TV-kanal]]ale pidab olda kožujanke valdkundaliženke todištusenke registracijas. Kanalal alusenpanii i valdoičii kompanii om olmas.
 
 Alemba om '''Venäman TV-kanaloiden nimikirjutesid'''.
-# '''[[Venäman TV-kanaloiden 1. mul'tikompleks|1. mul'tikompleks]]''' (kaikile sättujad)
-# '''[[Venäman TV-kanaloiden 2. mul'tikompleks|2. mul'tikompleks]]''' (toižed znamoičendan mödhe)
-# '''3. mul'tikompleks''' (planoiš, regionaližiden i municipaližiden TV-kanaloiden täht)
-# '''[[Venäman federaližed TV-kanalad|Federaližed TV-kanalad]]'''
-# '''[[Venäman regionaližed TV-kanalad|Regionaližed TV-kanalad]]'''
-# '''[[Venäman municipaližed TV-kanalad|Municipaližed TV-kanalad]]'''
-# '''[[Venäman TV-kanalad verhiš maiš|TV-kanalad verhiš maiš]]'''
+* '''[[Venäman TV-kanaloiden 1. mul'tikompleks|1. mul'tikompleks]]''' (kaikile sättujad)
+* '''[[Venäman TV-kanaloiden 2. mul'tikompleks|2. mul'tikompleks]]''' (toižed znamoičendan mödhe)
+* '''3. mul'tikompleks''' (planoiš, regionaližiden i municipaližiden TV-kanaloiden täht)
+* '''[[Venäman federaližed TV-kanalad|Federaližed TV-kanalad]]''' (päiči 1. i 2. mul'tikompleksas)
+* '''[[Venäman regionaližed TV-kanalad|Regionaližed TV-kanalad]]'''
+Joga region valičeb ičeze üks'jäšt kaikile sättujad kanalad. Tarbhaičendad: ičeze kontent otab koume kümnendest da sen enamba, oigenduz nägub regionan territorijan polel da sen enamba.
+* '''[[Venäman municipaližed TV-kanalad|Municipaližed TV-kanalad]]'''
+* '''[[Venäman TV-kanalad verhiš maiš|TV-kanalad verhiš maiš]]'''
 ----
-'''[[Enččed Venäman TV-kanalad|Enččed TV-kanalad]]'''
+* '''[[Enččed Venäman TV-kanalad|Enččed TV-kanalad]]'''
 
 {{Commons|Category:Television channels from Russia}}
 {{Venäman TV-kanalad}}
