--- a/Venäman_TV-kanalad.mw
+++ b/Venäman_TV-kanalad.mw
@@ -8,7 +8,7 @@ Alemba om '''Venäman TV-kanaloiden nimikirjutesid'''.
 * '''[[Venäman regionaližed TV-kanalad|Regionaližed TV-kanalad]]'''
 Joga region valičeb ičeze üks'jäšt kaikile sättujad kanalad. Tarbhaičendad: ičeze kontent otab koume kümnendest da sen enamba, oigenduz nägub regionan territorijan polel da sen enamba.
 * '''[[Venäman municipaližed TV-kanalad|Municipaližed TV-kanalad]]'''
-* '''[[Venäman TV-kanalad verhiš maiš|TV-kanalad verhiš maiš]]'''
+* '''[[Venäman TV-kanalad verhiš maiš]]'''
 ----
 * '''[[Enččed Venäman TV-kanalad|Enččed TV-kanalad]]'''
 
