*Empty MediaWiki Message*

--- a/Venäman_TV-kanalad.mw
+++ b/Venäman_TV-kanalad.mw
@@ -6,7 +6,7 @@ Alemba om '''Venäman TV-kanaloiden nimikirjutesid'''.
 * '''3. mul'tikompleks''' (planoiš, regionaližiden i municipaližiden TV-kanaloiden täht)
 * '''[[Venäman federaližed TV-kanalad|Federaližed TV-kanalad]]''' (päiči 1. i 2. mul'tikompleksas)
 * '''[[Venäman regionaližed TV-kanalad|Regionaližed TV-kanalad]]'''
-Joga region valičeb ičeze üks'jäšt kaikile sättujad kanalad. Tarbhaičendad: ičeze kontent otab koume nelländest da sen enamba, oigenduz nägub regionan territorijan polel da sen enamba.
+Joga region valičeb ičeze üks'jäšt kaikile sättujad kanalad. Tarbhaičendad: ičeze kontent otab koume nelländest vai sen enamba, oigenduz nägub regionan territorijan polel vai sen enamba.
 * '''[[Venäman municipaližed TV-kanalad|Municipaližed TV-kanalad]]'''
 * '''[[Venäman TV-kanalad verhiš maiš]]'''
 ----
