--- a/Darginalaižed.mw
+++ b/Darginalaižed.mw
@@ -1,4 +1,6 @@
-'''Darginalaižed''' ({{lang-dar|дарганти}}, üks'lugu ''дарган'', {{lang-av|даргиял}}, {{lang-ru|даргинцы}}) oma üks' surembiš [[Kavkaz]]an i sen [[Dagestan]]an rahvahišpäi. Ristituiden lugu om läz 700 tuhad, elädas [[Venäma]]s tobjimalaz (589 386 rist. vl 2010), sen Dagestanas (tazovaldkundan ristitišton kudendez) i [[Stavropolin rand]]an päivnouzmas.
+'''Darginalaižed''' ({{lang-dar|дарганти / дарккванте}}, üks'lugu ''дарган / дарккван'', {{lang-av|даргиял}}, {{lang-ru|даргинцы}}) oma üks' surembiš [[Kavkaz]]an i sen [[Dagestan]]an igähižiš rahvahišpäi.
+
+Ristituiden lugu om läz 700 tuhad (vn 2015 andmused), elädas [[Venäma]]s tobjimalaz (589 386 rist. vl 2010), sen Dagestanas (rahvahan viž seičemendest, tazovaldkundan ristitišton kudendez) i [[Stavropolin rand]]an päivnouzmas. Severz'-se tuhad darginalaižid elädas [[Rostovan agj]]as, [[Moskv]]as i Keskuzazijan maiš.
 
 Pagištas läz 14 erazvuttušt [[darginan keled|darginan kel't]], mugažo venän da avaran kelil. Uskojad oma [[islam]]an sunnitad päpaloin.
 
