--- a/Darginalaižed.mw
+++ b/Darginalaižed.mw
@@ -1,8 +1,11 @@
+[[Fail:Расселение даргинцев в ЮФО и СКФО по городским и сельским поселениям, в %.png|thumb|right|250px|Darginalaižiden pala ristitištos Venäman suvipäivlaskmas lidn- i küläkundoidme, vn 2010 rahvahanlugemine]]
 '''Darginalaižed''' ({{lang-dar|дарганти / дарккванте}}, üks'lugu ''дарган / дарккван'', {{lang-av|даргиял}}, {{lang-ru|даргинцы}}) oma üks' surembiš [[Kavkaz]]an i sen [[Dagestan]]an igähižiš rahvahišpäi.
 
-Ristituiden lugu om läz 700 tuhad (vn 2015 andmused), elädas [[Venäma]]s tobjimalaz (589 386 rist. vl 2010), sen Dagestanas (rahvahan viž seičemendest, tazovaldkundan ristitišton kudendez) i [[Stavropolin rand]]an päivnouzmas. Severz'-se tuhad darginalaižid elädas [[Rostovan agj]]as, [[Moskv]]as i Keskuzazijan maiš.
+Ristituiden lugu om läz 700 tuhad (vn 2015 andmused), elädas [[Venäma]]s tobjimalaz (589 386 rist. vl 2010), sen Dagestanas (rahvahan viž seičemendest, tazovaldkundan ristitišton kudendez) i [[Stavropolin rand]]an päivnouzmas. Severz'-se tuhad darginalaižid elädas neniš regionoiš da valdkundoiš, kaikuččes: [[Rostovan agj]], [[Kalmikii]], [[Astrahanin agj]] i [[Moskv]]; [[Ukrain]], [[Azerbaidžan]] i Keskuzazijan mad.
 
 Pagištas läz 14 erazvuttušt [[darginan keled|darginan kel't]], mugažo venän da avaran kelil. Uskojad oma [[islam]]an sunnitad päpaloin.
+
+{{Commons|Category:Dargin people}}
 
 {{stub}}
 [[Kategorii:Darginalaižed| ]]
