+ galerei, +hom, aktualizacii

--- a/Čerepanovo.mw
+++ b/Čerepanovo.mw
@@ -5,16 +5,16 @@
  | Lidnanznam text = Čerepanovon lidnanznam
  | Flag text =
  | Valdkund = Venäma
- | Eläjiden lugu = 19,612
- | Voz' = 2017
+ | Eläjiden lugu = 18,846
+ | Voz' = 2021
  | Pind = 24.23
  | Fail = Memorial in Cherepanovo, Novosibirsk Oblast, Russia 1 - panoramio.jpg
- | Pämez' = Nikolai Rundaev (2016—)
+ | Pämez' = Nikolai Rundaev<br />(2016—)
  | Telefonkod = +7-38345-xx-xxx
  | Avtokod = 54. 154
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
-'''Čerepanovo''' ({{lang-ru|Черепаново}}) om [[Venäma]]n lidn da lidnankund [[Novosibirskan agj]]an suvipäivnouzmas. Se om [[Čerepanovon rajon]]an administrativine keskuz.
+'''Čerepanovo''' ({{lang-ru|Черепа́ново}}) om [[Venäma]]n lidn da lidnankund [[Novosibirskan agj]]an suvipäivnouzmas. Se om [[Čerepanovon rajon]]an administrativine keskuz.
 
 == Istorii ==
 Eländpunktan aluz om pandud vl 1912 ''Čerepanovo-raudtestancijaks'' sauvomha da holitamha raudted [[Barnaul]]hasai, Čerepanov-manmehen mectudpertiižen sijas, sid'-žo ''Svobodnii-žilo'' formiruižeškanzi raudtestancijanno. Saudihe raudtestancijad vodele 1915. Vn 1925 6. päiväl kezakud anttihe lidnan statusad da nimitihe raudtestancijan mödhe.
@@ -27,12 +27,23 @@ Lidn sijadase [[Ob' (jogi)|Obin]] oigedpol'žes basseinas, 280 m ü.m.t. keskmä
 Čerepanovo om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 19 300 ristitud, rajonan kaks' videndest. Kaikiš suremb ristitišt oli 23 100 eläjad vl 1998. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] koume jumalanpertid oma olmas lidnas: ph. Oleksijan (1914, udessundutihe vspäi 2006), Sibirin Kaikiden Pühämehiden (1987) mez'jumalankodinke (vspäi 2006) i Simeon Verhoturjelaižen (2001).
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 19 300 ristitud, rajonan kaks' videndest. Kaikiš suremb ristitišt oli 23 100 eläjad vl 1998.
 
-Professionaližen opendusen aluzkundad: Čerepanovon politehnine kolledž i pedagogine tehnikum.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] koume jumalanpertid oma olmas lidnas: ph. Oleksijan (1914, udessundutihe vspäi 2006), Sibirin Kaikiden Pühämehiden (1987) mez'jumalankodinke (vspäi 2006) i Simeon Verhoturjelaižen (2001).
+
+Professionaližen opendusen aluzkundad: Čerepanovon politehnine kolledž<ref>[http://cherpu99.ru/ Čerepanovon politehnižen kolledžan sait (''cherpu99.ru'').] {{ref-ru}}</ref> i pedagogine tehnikum.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Memorial in Cherepanovo, Novosibirsk Oblast, Russia 2 - panoramio.jpg|Sodamemorial i vezičuhunduz (2014)
+Memorial in Cherepanovo, Novosibirsk Oblast, Russia 3 - panoramio.jpg|Tank-muštnik (2014)
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
-* [http://admcherepanovo.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''admcherepanovo.ru'').] {{ref-ru}}
+* [http://admcherepanovo.nso.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''admcherepanovo.nso.ru'').] {{ref-ru}}
 {{Commons|Category:Cherepanovo}}
 
 {{Novosibirskan agjan lidnad}}
