+ galerei, +hom, aktualizacii

--- a/Čulim_(lidn).mw
+++ b/Čulim_(lidn).mw
@@ -5,8 +5,8 @@
  | Lidnanznam text =
  | Flag text =
  | Valdkund = Venäma
- | Eläjiden lugu = 11,270
- | Voz' = 2017
+ | Eläjiden lugu = 10,296
+ | Voz' = 2021
  | Pind = 25
  | Fail = Монумент Славы воинам Чулымского района.jpg
  | Pämez' = Andrei Stepanov<br />(keväz'ku 2010—)
@@ -27,12 +27,26 @@ Lidn sijadase [[Čulim (jogi, lankteb Penihe Čanihe)|ühtennimižen jogen]] oik
 Čulim om lidnankundan üks'jäine eländpunkt. Lidnankundan pind — 223,31 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 12 tuh. ristituid, rajonan pol'. Kaikiš suremb ristitišt oli 18 161 eläjad vl 1959. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Sündundpäivän pühäpert' om olmas lidnas (2009).
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 12 tuh. ristituid, rajonan pol'. Kaikiš suremb ristitišt oli 18 161 eläjad vl 1959.
 
-Čuliman rajonidenkeskeine agrarine licei om professionaližen opendusen aluzkundaks.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Sündundpäivän pühäpert' om olmas lidnas (2009).
+
+Čuliman rajonidenkeskeine agrarine licei<ref>[http://chulagrolicei.ucoz.net/ 
+Čuliman rajonidenkeskeižen agrarižen licein sait (''chulagrolicei.ucoz.net'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+МКОУ СОШ № 1.jpg|Keskškol nomer 1, vn 2017 nägu
+МБОУ Чулымский лицей.jpg|Čuliman licei (järgeline keskopenduz) vl 2017
+Дом Детского творчества.jpg|Lapsiden sädamižen pert' (2017)
+Станция Чулымская (вокзал).jpg|Čulimskai-päraudtestancijan sauvuz vl 2021
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
-* [http://chulym.nso.ru/ Lidnan da rajonan tobmuden aluzkundoiden oficialine sait (''chulym.nso.ru'').] {{ref-ru}}
+* [http://admchulym.nso.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''admchulym.nso.ru'').] {{ref-ru}}
 
 {{Novosibirskan agjan lidnad}}
 
