*Empty MediaWiki Message*

--- a/Čulim_(lidn).mw
+++ b/Čulim_(lidn).mw
@@ -31,8 +31,7 @@ Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 12 tuh. ristituid,
 
 [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Sündundpäivän pühäpert' om olmas lidnas (2009).
 
-Čuliman rajonidenkeskeine agrarine licei<ref>[http://chulagrolicei.ucoz.net/ 
-Čuliman rajonidenkeskeižen agrarižen licein sait (''chulagrolicei.ucoz.net'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+Čuliman rajonidenkeskeine agrarine licei<ref>[http://chulagrolicei.ucoz.net/ Čuliman rajonidenkeskeižen agrarižen licein sait (''chulagrolicei.ucoz.net'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
