--- a/Än'.mw
+++ b/Än'.mw
@@ -6,6 +6,11 @@
 
 Mahtuz pästta än't i [[kulemine]] oma sidotud keskneze, kurdeh sündundaspäi mez' ei voi tehta oiktoid kulundoid. Ristit ozutab änel ičeze emocionališt oleldad: kärauduz, opal, čududelend, ihastuz da toižed. Nened süd valatoittas änen laduid: ühthine fizine olend, hibjan organoiden sijaduz, mel', emocionaline olend.
 
+== Än'he sidodud vepsän muštatiž ==
+<blockquote>
+* ''Kaikuččel lindul ičeze än'.''
+</blockquote>
+
 == Homaičendad ==
 <references />
 
