/* Pajoho sidodud vepsän muštatiž */ +

--- a/Pajo.mw
+++ b/Pajo.mw
@@ -8,8 +8,10 @@ Erinedas pajod žanroiden, mülükundan, edestusen formiden da toižiden tundusi
 
 Pajo voib edestadas kut ühtel [[pajatai|pajatajal]], muga [[hor]]al-ki. Pajatadas pajoid kut [[soitod|instrumentaliženke]] mödustandanke, ninga sita ([[a cappella]]).
 
-== Pajoho sidodud vepsän muštatiž ==
+== Pajoho sidodud vepsän muštatišed ==
 <blockquote>
+* ''Mitte linduine, mugoi(ne) i pajoine.''
+* ''Pahal lindul i pajod pahad oma.''
 * ''Pajata hot' karzn'as ka kuldas, voika hot' pertin päl ka ei kulgoi.''
 </blockquote>
 
