/* Čomudehe sidodud vepsän muštatišed */ +

--- a/Čomuz.mw
+++ b/Čomuz.mw
@@ -16,6 +16,7 @@ Ristitun čomuz oleleb hibjan da irdpol'ne čomuz, i hengeline čomuz. Čomuden 
 * ''Čoma i unes čoma.''
 * ''Ei kalliž ole čomuz, a kalliž om pä.''
 * ''Kand sädota, ka mugažo čoma linneb.''
+* ''Lop om čoma, ka i kaik om čoma.''
 * ''Sigä om čoma, kus meid ei ole.''
 * ''Sö kromaine, ka linned priha čomaine.''
 * ''Väges ed čomenzu.''
