--- a/Liha.mw
+++ b/Liha.mw
@@ -14,8 +14,9 @@ Lihan tobj pala tegese lihasuguiden maižanduseližen [[kabjživatišt]]on da [[
 
 Lihan vozne tehmine ühtele hengele om 33,2 kg, valdkundad-liderad da päeksportörad oma Evropan mad, Avstralii, Uz' Zelandii. Mail'man tehmine om 53..54 mln tonnoid vodes. Kazvatadud lihan toižendoiden struktur: sigaliha — 39,1 %, linduiden liha — 29,3 %, lehmänliha — 25,0 %, lambazliha — 4,8 %, toine liha — 1,8 %.
 
-== Lihaze sidotud vepsän muštatiž ==
+== Lihaze sidodud vepsän muštatišed ==
 <blockquote>
+* ''Lingaha lud, ka i liha linneb.''
 * ''Veraz liha magedamb.''
 </blockquote>
 
