/* Opendushe sidodud vepsän muštatišed */ +

--- a/Openduz.mw
+++ b/Openduz.mw
@@ -98,6 +98,7 @@ Britanine joganedal'ne [[The Economist]]-lehtez kirjuti [[Vikipedii|Vikipedijan]
 == Opendushe sidodud vepsän muštatišed ==
 <blockquote>
 * ''Ala openda kalad ujumaha.''
+* ''Ed luge — ed ni openda.''
 * ''Ei koir ujumaha opete händad ligotamata.''
 * ''Igän eläd, igän openud.''
 * ''Maman openduz — kündushesai.''
