/* Sömhä sidodud vepsän muštatišed */ +

--- a/Söm.mw
+++ b/Söm.mw
@@ -15,6 +15,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 <blockquote>
 * ''Andoi jumal sun, andab sömäd-ki (supalan-ki).''
 * ''Ei i car' kuldad sö.''
+* ''Ei luzik söta.''
 * ''En olend sönu – emboinu, a söin da en ni sijaspäi.''
 * ''Heimod om äi, söda ei kus.''
 * ''Kelel päd ed söta.''
@@ -23,6 +24,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 * ''Lapses om äi ližad: kalan sab da kaks' söb.''
 * ''Lehm tanhal — söm pertiš.''
 * ''Leib da vezi — saldatan söm.''
+* ''Luzikaine, ole hüvä, mäne sömha!''
 * ''Mez' söb, mez' sab, mehele andab Jumal.''
 * ''Midä ei sögoi, sidä i laudale ei togoi.''
 * ''Mitte samine, mugoi i sömine.''
