/* Linduihe sidotud vepsän muštatišed */

--- a/Lindud.mw
+++ b/Lindud.mw
@@ -26,7 +26,7 @@ Nägujad tundused oma n'ok da höunhišt. Ezilopused kändihe suugikš. Höunhed
 
 Linduiden klassha mülüdas [[kur'g]]ed, [[joucen|joucned]], [[kajag]]ed, [[kana]]d, [[vilulind]]ud da toižed. Ned oma socialižed živatad, mecatas i kaičesoiš lihansöjid vaste ühtes. Äjad erikoišpäi oma kezalinduikš, letas tal'veks lämihe maihe parvehil da joukuil. Vepsänma om mugažo läm' ma pehmdanke tal'venke erasiden Edahaižen Pohjoižen erikoiden täht. Om kalajdajid-ki linduid.
 
-== Linduihe sidotud vepsän muštatišed ==
+== Linduihe sidodud vepsän muštatišed ==
 <blockquote>
 * ''Aigaline linduine nenaižen sel'gitab, a möhäine linduine völ suugaižed oigendeleb.''
 * ''Jogo lindule om ičeze peza kalliž.''
