/* Pähä sidodud vepsän muštatišed */ +

--- a/Pä.mw
+++ b/Pä.mw
@@ -30,6 +30,7 @@ Südäimižed:
 * ''Kažita hired i pän södas.''
 * ''Kelel päd ed söta.''
 * ''Lajind satatest ei tege, kuni pul pähä ei iške.''
+* ''Oliži nišk, a länged löudasoiš.''
 * ''Pän kibištab, perskele kebnemb om.''
 * ''Ülemba päd korvad ei kazgoi.''
 </blockquote>
