--- a/Derri.mw
+++ b/Derri.mw
@@ -5,18 +5,18 @@
  | Lidnanznam text = Derrin lidnanznam (Nju Gempšir)
  | Flag text = 
  | Valdkund = Amerikan Ühtenzoittud Valdkundad
- | Eläjiden lugu = 33,440
- | Voz' = 2017
+ | Eläjiden lugu = 34,317
+ | Voz' = 2020
  | Pind = 94.5
  | Fail = 
  | Pämez' = 
  | Telefonkod = 
  | Aigvö = tal'vel [[UTC]]−5,<br />kezal [[UTC]]−4
 }}
-'''Derri''' ({{lang-en|Derry}}) om [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] lidn [[Nju Gempšir]]-štatan suvipäivnouzmas.
+'''Derri''' ({{lang-en|Derry}}) om [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] lidn [[Nju Gempšir]]-štatan suvipäivnouzmas, sen Rokingem-ümbrikos. Ümbrikon kaikiš suremb lidn, štatan nellänz' eländpunkt eläjiden lugun mödhe.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1719 šotlandijalaižil i irlandijalaižil sirdnikoil. Ezmäine AÜV:oiden [[kartohk]]an kazvatandan taho oli neciš lidnas.
+Eländpunktan aluz om pandud šotlandižil i irlandižil sirdnikoil vl 1719. Ezmäine AÜV:oiden [[kartohk]]an kazvatandan taho oli neciš lidnas.
 
 == Geografijan andmused ==
 Lidn sijadase 86 m ü.m.t. keskmäižel korktusel.
@@ -26,6 +26,8 @@ Vn 2010 AÜV:oiden rahvahanlugemižen mödhe lidnan eläjiden lugu oli 33 109 ri
 == Homaičendad ==
 <references />
 
+== Irdkosketused ==
+* [http://derrynh.org/ Lidnan oficialine sait (''derrynh.org'').] {{ref-en}}
 {{Commons|Category:Derry, New Hampshire}}
 
 {{stub}}
