--- a/Derri.mw
+++ b/Derri.mw
@@ -16,12 +16,12 @@
 '''Derri''' ({{lang-en|Derry}}) om [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] lidn [[Nju Gempšir]]-štatan suvipäivnouzmas, sen Rokingem-ümbrikos. Ümbrikon kaikiš suremb lidn, štatan nellänz' eländpunkt eläjiden lugun mödhe.
 
 == Istorii ==
-Eländpunktan aluz om pandud šotlandižil i irlandižil sirdnikoil vl 1719. Ezmäine AÜV:oiden [[kartohk]]an kazvatandan taho oli neciš lidnas.
+Eländpunktan aluz om pandud šotlandižil i irlandižil sirdnikoil vl 1719. Ezmäine AÜV:oiden [[kartohk]]an kazvatandan taho oli neciš lidnas sil-žo vodel. Lidn om nimitadud Pohjoižirlandijan Derri-lidnan mödhe, [[irlandijan kel'|irlandijan]] ''Doire''-sana znamoičeb «[[tamm]]ine mec». Lugetihe lähižen [[Londonderri]]-lidnan palaks hätken aigan.
 
 == Geografijan andmused ==
 Lidn sijadase 86 m ü.m.t. keskmäižel korktusel.
 
-Vn 2010 AÜV:oiden rahvahanlugemižen mödhe lidnan eläjiden lugu oli 33 109 ristitud. Kaikiš suremb ristitišt oli 34 021 eläjad vl 2000.
+Vn 2010 AÜV:oiden rahvahanlugemižen mödhe lidnan eläjiden lugu oli 33 109 ristitud. Kaikiš suremb ristitišt oli 34 021 eläjad vl 2000 i om nügüd'.
 
 == Homaičendad ==
 <references />
