--- a/Derri.mw
+++ b/Derri.mw
@@ -13,10 +13,10 @@
  | Telefonkod = 
  | Aigvö = tal'vel [[UTC]]−5,<br />kezal [[UTC]]−4
 }}
-'''Derri''' ({{lang-en|Derry}}) om [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] lidn [[Nju Gempšir]]-štatan suvipäivnouzmas, sen Rokingem-ümbrikos. Ümbrikon kaikiš suremb lidn, štatan nellänz' eländpunkt eläjiden lugun mödhe.
+'''Derri''' ({{lang-en|Derry}}) om [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] lidn [[Nju Gempšir]]-štatan suvipäivnouzmas, sen Rokingem-ümbrikos. Ümbrikon kaikiš suremb lidn, štatan nellänz' eländpunkt eläjiden lugun mödhe. Mülüb [[Sur' Boston]]-lidnaglomeracijha.
 
 == Istorii ==
-Eländpunktan aluz om pandud šotlandižil i irlandižil sirdnikoil vl 1719. Ezmäine AÜV:oiden [[kartohk]]an kazvatandan taho oli neciš lidnas sil-žo vodel. Lidn om nimitadud Pohjoižirlandijan Derri-lidnan mödhe, [[irlandijan kel'|irlandijan]] ''Doire''-sana znamoičeb «[[tamm]]ine mec». Lugetihe lähižen [[Londonderri]]-lidnan palaks hätken aigan.
+Eländpunktan aluz om pandud šotlandižil i irlandižil sirdnikoil vl 1719. Ezmäine AÜV:oiden [[kartohk]]an kazvatandan taho oli neciš lidnas sil-žo vodel. Lidn om nimitadud Pohjoižirlandijan Derri-lidnan mödhe, [[irlandijan kel'|irlandijan]] ''Doire''-sana znamoičeb «[[tamm]]ine mec». Lugetihe lähižen [[Londonderri (Nju Gempšir)|Londonderri]]-lidnan palaks hätken aigan, se lidn sijadase ani päivlaskmha.
 
 == Geografijan andmused ==
 Lidn sijadase 86 m ü.m.t. keskmäižel korktusel.
