--- a/Biratnagar.mw
+++ b/Biratnagar.mw
@@ -5,19 +5,20 @@
  | Lidnanznam text = 
  | Flag text = 
  | Valdkund = Nepal
- | Eläjiden lugu = 242,548
- | Voz' = 2011
+ | Eläjiden lugu = 244,750
+ | Voz' = 2021
  | Pind = 77.5
- | Fail = Biratnagar Main Gate-1023.jpg
+ | Fail = Biratnagar Drone Footage.png
  | Pämez' = 
  | Telefonkod = +997-(0)21
  | Aigvö = [[UTC]]+5:45
 }}
-'''Biratnagar''' ({{lang-ne|विराटनगर}}) om lidn [[Nepal]]an suvipäivnouzmas. Se om valdkundan nellänz' lidn eläjiden lugun mödhe, [[Agj nomer 1 (Nepal)|Agjan nomer 1]] administrativine keskuz.
-
-Lidn sijadase 80 m ü.m.t. keskmäižel korktusel. Matkad [[Indii|Indijan]] röunhasai om 6 km suvhe, [[Katmandu]]-pälidnhasai om 400 km päivlaskmha.
+'''Biratnagar''' ({{lang-ne|विराटनगर}}) om lidn [[Nepal]]an suvipäivnouzmas. Se om valdkundan kudenz' lidn eläjiden lugun mödhe, [[Agj nomer 1 (Nepal)|Agjan nomer 1]] administrativine keskuz.
 
 Biratnagar om valdkundan kahtenz' tegimištoline keskuz. [[Džut]]an fabrikad, järed jüguraudtestancii sarakol Indijaspäi.
+
+== Geografijan andmused ==
+Lidn sijadase 80 m ü.m.t. keskmäižel korktusel. Matkad [[Indii|Indijan]] röunhasai om 6 km suvhe, [[Katmandu]]-pälidnhasai om 400 km päivlaskmha.
 
 Vn 2011 Nepalan rahvahanlugemižen mödhe eläjiden lugu oli 242 548 ristitud.
 
