--- a/Biratnagar.mw
+++ b/Biratnagar.mw
@@ -13,9 +13,12 @@
  | Telefonkod = +997-(0)21
  | Aigvö = [[UTC]]+5:45
 }}
-'''Biratnagar''' ({{lang-ne|विराटनगर}}) om lidn [[Nepal]]an suvipäivnouzmas. Se om valdkundan kudenz' lidn eläjiden lugun mödhe, [[Agj nomer 1 (Nepal)|Agjan nomer 1]] administrativine keskuz.
+'''Biratnagar''' ({{lang-ne|विराटनगर}} «sur'kulu lidn») om lidn [[Nepal]]an suvipäivnouzmas. Se om valdkundan kudenz' lidn eläjiden lugun mödhe, [[Agj nomer 1 (Nepal)|Agjan nomer 1]] administrativine keskuz.
 
-Biratnagar om valdkundan kahtenz' tegimištoline keskuz. [[Džut]]an fabrikad, järed jüguraudtestancii sarakol Indijaspäi.
+== Istorii ==
+Eländpunkt mainitase 7. voz'sadaspäi, edeline nimituz oli ''Gograha Bazaar''. Nügüd'aigaine nimituz om anttud vl 1919 endevanhan pert'kulun suriden ruinoiden olendan tagut.
+
+Biratnagar om valdkundan kahtenz' tegimištoline keskuz. [[Džut]]an fabrikad, järed jüguraudtestancii sarakol Indijaspäi (üks' kahtespäi Nepalas).
 
 == Geografijan andmused ==
 Lidn sijadase 80 m ü.m.t. keskmäižel korktusel. Matkad [[Indii|Indijan]] röunhasai om 6 km suvhe, [[Katmandu]]-pälidnhasai om 400 km päivlaskmha.
