--- a/Tsvanan_kel'.mw
+++ b/Tsvanan_kel'.mw
@@ -5,6 +5,32 @@ Pagižijoiden lugu om läz 8 millionad ristituid, sidä kesken mamankeleks Botsv
 
 Tsvanan kelen reguliruindorganizacii om [[Pan South African Language Board|PanSALB]], se om ühthine SAT:an 11 oficialižen kelen täht i radab [[Pretorii|Pretorijas]] vspäi 1995.
 
+Kelen painand om fiksiruidud edeljäl'gmäižel tavul. Kaks' tonad: korged i madal. Om kaičenus plokkonsonantid.
+
+== Kirjamišt ==
+Kelen kirjamed, digrafad, trigrafad da niiden virkand:
+{| <!-- class="standard" --> cellpadding=6 style="border-style:solid; border-width:2; border-collapse:collapse; text-align:center; font-size:130%" bordercolor="#000000"
+|- style="border: 1px solid #aaa"
+| Grafem || a || b || c || d || e || ê || f || g || h || i || j || k || kg || kh
+|--- style="border: 1px solid #aaa"
+| Virkand || [a] || [b/β] || [ǀ] || [ɺ] || [e, ɪ] || [ɛ] || [ɸ/f] || [x] || [h] || [i] || [ʤ] || [k’] ||  [kxʰ] || [kʰ]
+|--- class="dark"
+| colspan=15 |
+|--- style="border: 1px solid #aaa"
+| Grafem || l || m || n || ng || ny || o || ô || p || ph || q || r || s || š / sh || t
+|--- style="border: 1px solid #aaa"
+| Virkand || [l] || [m] || [n] || [ŋ] ||  [ɲ] || [o, ʊ] || [ɔ] || [p’] || [pʰ] || [ǃ] || [r] || [s] || [ʃ] || [t’]
+|--- class="dark"
+| colspan=15 |
+|--- style="border: 1px solid #aaa"
+| Grafem || th || tl || tlh || ts || tsh || tš || tšh || u || v || w || x || y || z ||
+|--- style="border: 1px solid #aaa"
+| Virkand ||  [tʰ] ||  [tɬ’] ||  [tɬʰ] ||  [ts’] ||  [tsʰ] || [ʧ’] || [ʧʰ] || [u] || [v] || [w] || [ǁ] || [j] || [z] ||
+|}
+*Erižed fonemad om erigoittud katkimil, ühten foneman allofonad — slešal
+
+Labializuidud konsonantad kirjutadas «w»-kirjamen ližadusenke: gw, tshw, nyw da m.e..
+
 == Homaičendad ==
 <references />
 
