--- a/Tsvanan_kel'.mw
+++ b/Tsvanan_kel'.mw
@@ -27,7 +27,7 @@ Kelen kirjamed, digrafad, trigrafad da niiden virkand:
 |--- style="border: 1px solid #aaa"
 | Virkand ||  [tʰ] ||  [tɬ’] ||  [tɬʰ] ||  [ts’] ||  [tsʰ] || [ʧ’] || [ʧʰ] || [u] || [v] || [w] || [ǁ] || [j] || [z] ||
 |}
-*Erižed fonemad om erigoittud katkimil, ühten foneman allofonad — slešal
+<small>*Erižed fonemad om erigoittud katkimil, ühten foneman allofonad — slešal.</small>
 
 Labializuidud konsonantad kirjutadas «w»-kirjamen ližadusenke: gw, tshw, nyw da m.e..
 
