--- a/Tsvanan_kel'.mw
+++ b/Tsvanan_kel'.mw
@@ -1,11 +1,10 @@
 [[Fail:South Africa 2001 Tswana speakers proportion map.svg|thumb|right|250px|Tsvanan kelen kävutand [[Suviafrik]]as]]
 '''Tsvanan kel'''' (ičeze nimituz: ''seTswana'') om [[bantun keled|bantu-gruppan]] kel'. Se om [[Botsvan]]an valdkundkel' [[anglijan kel'|anglijan kelen]] ühtes da [[Suviafrikan Tazovaldkund]]an üks' 11 valdkundkelespäi. 
 
+== Kelen olend ==
 Pagižijoiden lugu om läz 8 millionad ristituid, sidä kesken mamankeleks Botsvanas 1,1 mln, SAT:as 4,1 mln, jättud toižeks keleks. Tsvanan kirjkel' om [[latinan kirjamišt]]on pohjal. Ezmäižed tsvanankel'žed kirjad oma sätud missioneroil Biblijan kändused 19. voz'sadan keskele.
 
 Tsvanan kelen reguliruindorganizacii om [[Pan South African Language Board|PanSALB]], se om ühthine SAT:an 11 oficialižen kelen täht i radab [[Pretorii|Pretorijas]] vspäi 1995.
-
-Kelen painand om fiksiruidud edeljäl'gmäižel tavul. Kaks' tonad: korged i madal. Om kaičenus plokkonsonantid.
 
 == Kirjamišt ==
 Kelen kirjamed, digrafad, trigrafad da niiden virkand:
@@ -29,7 +28,12 @@ Kelen kirjamed, digrafad, trigrafad da niiden virkand:
 |}
 <small>*Erižed fonemad om erigoittud katkimil, ühten foneman allofonad — slešal.</small>
 
+== Grammatik ==
+Kelen painand om fiksiruidud edeljäl'gmäižel tavul. Kaks' tonad: korged i madal. Om kaičenus plokkonsonantid.
+
 Labializuidud konsonantad kirjutadas «w»-kirjamen ližadusenke: gw, tshw, nyw da m.e..
+
+[https://tn.wikipedia.org/wiki/Main_Page Vikipedii tsvanan kelel] sädase ''tn.wikipedia.org''-saital.
 
 == Homaičendad ==
 <references />
