--- a/Tsvanan_kel'.mw
+++ b/Tsvanan_kel'.mw
@@ -1,4 +1,4 @@
-[[Fail:South Africa 2001 Tswana speakers proportion map.svg|thumb|right|250px|Tsvanan kelen kävutand [[Suviafrik]]as]]
+[[Fail:South Africa 2001 Tswana speakers proportion map.svg|thumb|right|250px|Tsvanan kelen kävutand [[Suviafrikan Tazovaldkund]]as (2001)]]
 '''Tsvanan kel'''' (ičeze nimituz: ''seTswana'') om [[bantun keled|bantu-gruppan]] kel'. Se om [[Botsvan]]an valdkundkel' [[anglijan kel'|anglijan kelen]] ühtes da [[Suviafrikan Tazovaldkund]]an üks' 11 valdkundkelespäi. 
 
 == Kelen olend ==
